# SambaNova-Llama3.1-PersonalAssistant

./: .env copy  .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml
src/: chat.py  client.py  google_tools.py  gui.py  persistence.py  pydantic_classes.py  settings.py  stt.py  tools.py  tts.py  utils.py
src/tools/: base.py  gmail.py  google_calendar.py  news.py  schema_generation.py  utils.py  weather.py
src/tools/google_tools/: base.py  credentials.py  executors.py  services.py
src/utils/: google.py
