[tool.poetry]
name = "samba-llama3-agent"
version = "0.1.0"
description = ""
authors = ["Juan Ovalle <jj.ovalle@uniandes.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.42.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[tool.poetry.group.format.dependencies]
ruff = "^0.6.2"


[tool.poetry.group.logs.dependencies]
loguru = "^0.7.2"
termcolor = "^2.4.0"

[tool.ruff]
line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
